fix: box shadow not displaying well on mobile

--- a/assets/styles/components/Header.scss
+++ b/assets/styles/components/Header.scss
@@ -15,7 +15,7 @@ header {
     img {
       @apply h-full;
       @apply w-full;
-      @apply object-contain;
+      @apply object-cover;
 
       filter: grayscale(100%);
 
@@ -45,21 +45,20 @@ header {
         }
       }
     }
+  }
 
-    &::before {
-      content: '';
-      @apply absolute;
-      @apply bottom-0;
-      @apply inset-x-0;
+  &::before {
+    content: '';
+    @apply absolute;
+    @apply bottom-0;
+    @apply inset-x-0;
 
-      height: 100px;
+    height: 100px;
 
-      @apply z-10;
+    @apply z-10;
 
-      -webkit-box-shadow: inset 0px -60px 50px 0px rgba(24,24,24,1);
-      -moz-box-shadow: inset 0px -60px 50px 0px rgba(24,24,24,1);
-      box-shadow: inset 0px -60px 50px 0px rgba(24,24,24,1);
-    }
+    background: rgb(24,24,24);
+    background: linear-gradient(0deg,rgba(24,24,24,1) 30%, rgba(24,24,24,0) 100%);
   }
 
   >main {
